fixed the header made it bigger again but needs fxing on the links please fix it

--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -102,8 +102,10 @@
     <Content Include="favicon_io\favicon-32x32.png" />
     <Content Include="favicon_io\favicon_staff.ico" />
     <Content Include="home.png" />
+    <Content Include="icons8-pet-100.png" />
     <Content Include="nwu.png" />
     <Content Include="pet.jpg" />
+    <Content Include="pet.png" />
     <Content Include="pukke.png" />
     <Content Include="signin.aspx" />
     <Content Include="signup.aspx" />
