--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -67,7 +67,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="about.aspx" />
+    <Content Include="about.aspx">
+      <BrowseToURL>/about.aspx</BrowseToURL>
+    </Content>
     <Content Include="back.jpg" />
     <Content Include="contact.aspx">
       <BrowseToURL>/contact.aspx</BrowseToURL>
@@ -107,11 +109,14 @@
     <Content Include="pet.jpg" />
     <Content Include="pet.png" />
     <Content Include="pukke.png" />
-    <Content Include="signin.aspx" />
+    <Content Include="signin.aspx">
+      <BrowseToURL>/signin.aspx</BrowseToURL>
+    </Content>
     <Content Include="signup.aspx" />
     <Content Include="vet.jpg" />
     <Content Include="vetVideo.MOV" />
     <Content Include="Web.config" />
+    <Content Include="website.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="about.aspx.cs">
