--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -72,6 +72,7 @@
     <Content Include="App_Data\PetPalsClinic_log.ldf">
       <DependentUpon>PetPalsClinic.mdf</DependentUpon>
     </Content>
+    <Content Include="askQuestion.aspx" />
     <Content Include="back.jpg" />
     <Content Include="contact.aspx">
       <BrowseToURL>/contact.aspx</BrowseToURL>
@@ -86,6 +87,7 @@
     <Content Include="faq.aspx">
       <BrowseToURL>/faq.aspx</BrowseToURL>
     </Content>
+    <Content Include="FAQ.png" />
     <Content Include="favicon_client\android-chrome-192x192.png" />
     <Content Include="favicon_client\android-chrome-512x512.png" />
     <Content Include="favicon_client\apple-touch-icon.png" />
@@ -102,6 +104,7 @@
     <Content Include="favicon_io\android-chrome-192x192.png" />
     <Content Include="favicon_io\android-chrome-512x512.png" />
     <Content Include="favicon_io\apple-touch-icon.png" />
+    <Content Include="favicon_io\FAQ.png" />
     <Content Include="favicon_io\favicon-16x16.png" />
     <Content Include="favicon_io\favicon-32x32.png" />
     <Content Include="favicon_io\favicon_staff.ico" />
@@ -126,6 +129,13 @@
     </Compile>
     <Compile Include="about.aspx.designer.cs">
       <DependentUpon>about.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="askQuestion.aspx.cs">
+      <DependentUpon>askQuestion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="askQuestion.aspx.designer.cs">
+      <DependentUpon>askQuestion.aspx</DependentUpon>
     </Compile>
     <Compile Include="contact.aspx.cs">
       <DependentUpon>contact.aspx</DependentUpon>
