--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -68,14 +68,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="about.aspx" />
-    <Content Include="App_Data\Pet-Pals-Database.mdf" />
-    <Content Include="App_Data\Pet-Pals-Database_log.ldf">
-      <DependentUpon>Pet-Pals-Database.mdf</DependentUpon>
-    </Content>
-    <Content Include="App_Data\PetPalsClinic.mdf" />
-    <Content Include="App_Data\PetPalsClinic_log.ldf">
-      <DependentUpon>PetPalsClinic.mdf</DependentUpon>
-    </Content>
     <Content Include="back.jpg" />
     <Content Include="bookAppoinment.aspx" />
     <Content Include="contact.aspx">
@@ -202,6 +194,9 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
