--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -75,7 +75,7 @@
       <BrowseToURL>/contact.aspx</BrowseToURL>
     </Content>
     <Content Include="default.aspx">
-      <BrowseToURL>default.aspx</BrowseToURL>
+      <BrowseToURL>/default.aspx</BrowseToURL>
     </Content>
     <Content Include="doc.jpg" />
     <Content Include="doctor.jpg" />
@@ -137,6 +137,7 @@
     </Compile>
     <Compile Include="bookAppoinment.aspx.designer.cs">
       <DependentUpon>bookAppoinment.aspx</DependentUpon>
+    </Compile>
     <Compile Include="askQuestion.aspx.cs">
       <DependentUpon>askQuestion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
