Peace Gods and Goddess im adding a chatbot

--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -75,7 +75,7 @@
       <BrowseToURL>/contact.aspx</BrowseToURL>
     </Content>
     <Content Include="default.aspx">
-      <BrowseToURL>/default.aspx</BrowseToURL>
+      <BrowseToURL>default.aspx</BrowseToURL>
     </Content>
     <Content Include="doc.jpg" />
     <Content Include="doctor.jpg" />
