--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -69,8 +69,13 @@
   <ItemGroup>
     <Content Include="about.aspx" />
     <Content Include="App_Data\NewPetPals-Data.mdf" />
+    <Content Include="App_Data\NewPetPals-Data_log.ldf">
+      <DependentUpon>NewPetPals-Data.mdf</DependentUpon>
+    </Content>
     <Content Include="back.jpg" />
-    <Content Include="bookAppoinment.aspx" />
+    <Content Include="bookAppoinment.aspx">
+      <BrowseToURL>/bookAppoinment.aspx</BrowseToURL>
+    </Content>
     <Content Include="contact.aspx">
       <BrowseToURL>/contact.aspx</BrowseToURL>
     </Content>
@@ -152,7 +157,6 @@
     <Compile Include="contact.aspx.designer.cs">
       <DependentUpon>contact.aspx</DependentUpon>
     </Compile>
-    <Compile Include="customer.cs" />
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
