admin dashboard construction

--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -71,6 +71,7 @@
       <BrowseToURL>/about.aspx</BrowseToURL>
     </Content>
     <Content Include="about.jpg" />
+    <Content Include="Admin.aspx" />
     <Content Include="back.jpg" />
     <Content Include="contact.aspx">
       <BrowseToURL>/contact.aspx</BrowseToURL>
@@ -136,6 +137,13 @@
     </Compile>
     <Compile Include="about.aspx.designer.cs">
       <DependentUpon>about.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin.aspx.cs">
+      <DependentUpon>Admin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin.aspx.designer.cs">
+      <DependentUpon>Admin.aspx</DependentUpon>
     </Compile>
     <Compile Include="contact.aspx.cs">
       <DependentUpon>contact.aspx</DependentUpon>
