--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -112,6 +112,7 @@
     <Content Include="favicon_io\favicon_staff.ico" />
     <Content Include="home.png" />
     <Content Include="icons8-pet-100.png" />
+    <Content Include="bully.jpg" />
     <Content Include="nwu.png" />
     <Content Include="pet.jpg" />
     <Content Include="pet.png" />
