Due to loadshedding couldn't get it done but i'm 80% percent to get the thing done.

--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -112,7 +112,7 @@
     <Content Include="pet.png" />
     <Content Include="pukke.png" />
     <Content Include="Reece.jpg" />
-    <Content Include="responsesjs.js" />
+    <Content Include="script.js" />
     <Content Include="signin.aspx">
       <BrowseToURL>signin.aspx</BrowseToURL>
     </Content>
