changes on the signupSign up page updates

--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -137,7 +137,7 @@
       <BrowseToURL>signin.aspx</BrowseToURL>
     </Content>
     <Content Include="signup.aspx">
-      <BrowseToURL>/signup.aspx</BrowseToURL>
+      <BrowseToURL>signup.aspx</BrowseToURL>
     </Content>
     <Content Include="vet.jpg" />
     <Content Include="vetVideo.MOV" />
