--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -139,12 +139,14 @@
     <Content Include="petDetails.aspx" />
     <Content Include="pukke.png" />
     <Content Include="Reece.jpg" />
+    <Content Include="removePet.aspx" />
     <Content Include="signin.aspx">
       <BrowseToURL>signin.aspx</BrowseToURL>
     </Content>
     <Content Include="signup.aspx">
       <BrowseToURL>/signup.aspx</BrowseToURL>
     </Content>
+    <Content Include="updatePetDetails.aspx" />
     <Content Include="vet.jpg" />
     <Content Include="vetVideo.MOV" />
     <Content Include="Web.config" />
@@ -237,6 +239,13 @@
       <DependentUpon>petDetails.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="removePet.aspx.cs">
+      <DependentUpon>removePet.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="removePet.aspx.designer.cs">
+      <DependentUpon>removePet.aspx</DependentUpon>
+    </Compile>
     <Compile Include="signin.aspx.cs">
       <DependentUpon>signin.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -250,6 +259,13 @@
     </Compile>
     <Compile Include="signup.aspx.designer.cs">
       <DependentUpon>signup.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="updatePetDetails.aspx.cs">
+      <DependentUpon>updatePetDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="updatePetDetails.aspx.designer.cs">
+      <DependentUpon>updatePetDetails.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
