new doctor dashboard

--- a/New-Pet-System.csproj
+++ b/New-Pet-System.csproj
@@ -100,6 +100,9 @@
     <Content Include="doctor6.jpg" />
     <Content Include="doctor7.jpg" />
     <Content Include="doctor8.jpg" />
+    <Content Include="doctorProfile.aspx">
+      <BrowseToURL>/doctorProfile.aspx</BrowseToURL>
+    </Content>
     <Content Include="dog.jpg" />
     <Content Include="download.png" />
     <Content Include="faq.aspx">
@@ -207,6 +210,13 @@
     <Compile Include="default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="doctorProfile.aspx.cs">
+      <DependentUpon>doctorProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="doctorProfile.aspx.designer.cs">
+      <DependentUpon>doctorProfile.aspx</DependentUpon>
+    </Compile>
     <Compile Include="faq.aspx.cs">
       <DependentUpon>faq.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -225,9 +235,9 @@
       <DependentUpon>Profile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-	  <Compile Include="Profile.aspx.designer.cs">
-		  <DependentUpon>Profile.aspx</DependentUpon>
-	  </Compile>
+    <Compile Include="Profile.aspx.designer.cs">
+      <DependentUpon>Profile.aspx</DependentUpon>
+    </Compile>
     <Compile Include="notificationSettings.aspx.cs">
       <DependentUpon>notificationSettings.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
